discovery-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shopnow-discovery-server
  name: shopnow-discovery-server-deployment
  namespace: shopnow
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: shopnow-discovery-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: shopnow-discovery-server
      namespace: shopnow
    spec:
      containers:
        - image: thuanlp/shopnow_discovery-server:v1
          imagePullPolicy: Always
          name: shopnow-discovery-server
          ports:
            - containerPort: 8761
              name: tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /app/src/main/resources/application.properties
              name: shopnow-discovery-server-application-properties-config-volume
              subPath: application.properties
          readinessProbe:
            httpGet:
              path: /
              port: 8761
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8761
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 5          
      imagePullSecrets:
      - name: dockerhub
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - configMap:
            defaultMode: 420
            name: shopnow-discovery-server-application-properties-configmap
          name: shopnow-discovery-server-application-properties-config-volume
